--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
+    "@snowpack/plugin-build-script": "^2.0.12",
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-postcss": "^1.0.11",
     "@snowpack/plugin-vue": "^2.2.6",
@@ -18,13 +19,21 @@
     "@typescript-eslint/parser": "^4.10.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "autoprefixer": "^10.1.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-vue": "^7.3.0",
+    "postcss-cli": "^8.3.1",
     "prettier": "^2.2.1",
     "snowpack": "^2.18.4",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "tailwindcss": "2.0.2",
     "typescript": "^4.1.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "postcss": "8",
+      "vue-router": "next"
+    }
   }
 }
