--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "snowpack build"
   },
   "dependencies": {
-    "@vueuse/core": "^4.0.0-rc.11",
+    "@vueuse/core": "^4.0.3",
     "nprogress": "^0.2.0",
     "vue": "^3.0.4",
     "vue-router": "^3.4.9"
@@ -26,14 +26,11 @@
     "eslint-plugin-vue": "^7.3.0",
     "postcss-cli": "^8.3.1",
     "prettier": "^2.2.1",
-    "snowpack": "^2.18.4",
+    "snowpack": "^2.18.5",
     "tailwindcss": "2.0.2",
     "typescript": "^4.1.3"
   },
-  "pnpm": {
-    "overrides": {
-      "postcss": "8",
-      "vue-router": "next"
-    }
+  "peerDependencies": {
+    "postcss": "^8.2.2"
   }
 }
